# firefox-pkcs11-loader

./: .travis.yml  AUTHORS  CMakeLists.txt  LICENSE.LGPL.rtf  README.md  RELEASE-NOTES.md  RELEASE-NOTES.txt  chrome.manifest  esteidpkcs11loader.spec  firefox-pkcs11-loader.wxs  idemiaawppkcs11-mac.json  idemiaawppkcs11-win.json  idemiaawppkcs11.json  install.rdf.in  macos-postinstall.in  onepinopenscpkcs11-mac.json  onepinopenscpkcs11.json  onepinopenscpkcs11_Sys32.json  onepinopenscpkcs11_Sys64.json  org.mozilla.firefox.plist.in  {02274e0c-d135-45f0-8a9c-32b35110e10d}.xpi
.github/workflows/: build.yml
chrome/content/: browser.xul  pkcs11-loader.js
debian/: changelog  control  copyright  install  postinst  postrm  rules
debian/source/: include-binaries
webextension/: background.js  manifest.json
